--- a/src/test/resources/testData/testData1.properties
+++ b/src/test/resources/testData/testData1.properties
@@ -1,8 +1,11 @@
 sellerEmail = marketcube.qa@gmail.com
 sellerPassword = Password1234!
 Dashboard_verification = Dashboard
-productname =Automation Product94730
-productdescription = product_description93472
-productPrice = 73232605
-compareprice = 47377261
+productname =Automation Product89898
+productdescription = product_description96904
+productPrice = 48621005
+compareprice = 37299910
+skudata = 08865887
+barcode_data = 55866694
+
 
